--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@
 
 # production
 /build
-/dump
 
 # misc
 .DS_Store
@@ -32,7 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
 
 # vercel
 .vercel
@@ -40,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Other
+/dump
